--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,15 @@
     <![endif]-->
 
     <header id="pendulum-section" ng-controller="PendulumController">
-      <div class="shadow pendulum"></div>
-      <div class="logo"></div>
-      <div class="bulb pendulum "></div>
+      <div class="shadow pendulum">Ciao</div>
+      <div class="logo">
+        <!-- <img src="assets/images/boom.png" alt=""> -->
+      </div>
+      <div class="bulb pendulum ">
+        <img src="assets/images/bulb_light.png" alt="" class="light">
+        <img src="assets/images/lightbase.png" alt="" clas="perno">
+        <img src="assets/images/bulb.png" alt="" class="bulb_lighting">
+      </div>
     </header>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
