--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,12 @@
 <html ng-app="boom">
   <head>
     <meta charset="utf-8">
-    <title>boom</title>
+    <title>Boom - Satisfaction development</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="theme-color" content="#ec4873">
+    <link rel="icon" sizes="192x192" href="/assets/images/hi-res-favicon.png">
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
@@ -27,27 +30,30 @@
     <![endif]-->
 
     <header id="pendulum-section" ng-controller="PendulumController">
-      <div class="shadow pendulum">Ciao</div>
+      <!-- <div class="shadow pendulum">Ciao</div> -->
       <div class="logo">
-        <!-- <img src="assets/images/boom.png" alt=""> -->
+        <img src="assets/images/boom.png" alt="">
+        <h2>Satisfaction development</h2>
       </div>
       <div class="bulb pendulum ">
         <img src="assets/images/bulb_light.png" alt="" class="light">
-        <img src="assets/images/lightbase.png" alt="" clas="perno">
+        <img src="assets/images/lightbase.png" alt="" class="perno">
         <img src="assets/images/bulb.png" alt="" class="bulb_lighting">
       </div>
     </header>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-66345348-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp inject` to automatically populate bower script dependencies -->
