domani è un bel gionrno

--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
     <header id="pendulum-section" ng-controller="PendulumController">
       <!-- <div class="shadow pendulum">Ciao</div> -->
       <div class="logo">
-        <img src="assets/images/boom.png" alt="">
+<!--         <img src="assets/images/boom.png" alt="">
         <h2>Satisfaction development</h2>
-      </div>
+ -->      </div>
       <div class="bulb pendulum ">
         <img src="assets/images/bulb_light.png" alt="" class="light">
         <img src="assets/images/lightbase.png" alt="" class="perno">
