--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="boom">
+<html>
   <head>
     <meta charset="utf-8">
     <title>Boom - Satisfaction development</title>
@@ -29,7 +29,7 @@
       Non entri nel negozio di un sarto con una tuta dell'Adidas addosso..</p>
     <![endif]-->
 
-    <header id="pendulum-section" ng-controller="PendulumController">
+    <header id="pendulum-section">
       <div class="shadow pendulum">Ciao</div>
       <div class="logo">
         <img src="assets/images/boom.png" alt="">
